# todo-api-rust

./: AGENTS.md  Cargo.toml  Makefile  TODO.md  compose.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.dev  Makefile
backend/memo/: initialization.md
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250817_034433_create_table_todos.rs
backend/migrations/: 20250813120127_craete_todos.up.sql
backend/src/: errors.rs  infrastructure.rs  lib.rs  main.rs  presentation.rs
backend/src/application_service/: usecase.rs
backend/src/application_service/service/: transaction_service.rs
backend/src/application_service/usecase/: errors.rs  todo_usecase.rs
backend/src/domain/: models.rs  repositories.rs
backend/src/domain/models/: errors.rs  todo.rs
backend/src/domain/repositories/: conn.rs  errors.rs  todo_repository.rs
backend/src/infrastructure/: config.rs  repositories.rs
backend/src/infrastructure/repositories/: errors.rs  todo_repository.rs
backend/src/infrastructure/repositories/data_models/: mod.rs  prelude.rs  todo.rs  todos.rs
backend/src/infrastructure/services/: transaction_service.rs
backend/src/presentation/: errors.rs  hello_handler.rs  todo_handler.rs  validator.rs  wait_handler.rs
db/: init.sql
memo/: initialization.md
src/: errors.rs  main.rs
src/presentation/: health_handler.rs  hello_handler.rs  wait_handler.rs
