[package]
name = "todo-api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
axum-extra = "0.10.1"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "migrate"] }
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2" , features = ["util", "timeout"] }
uuid = { version = "1.18.0" , features = ["v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }

[dev-dependencies]
testcontainers = { version = "0.24.0" }
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
migration = { path = "./migration" }

[features]
db-tests = []
